# driftile

./: .gitignore  .prettierignore  README.md  REUSE.toml  eslint.config.js  flake.nix  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: README.md  architecture.md  compatibility.md  configuration.md  installation.md  interaction-model.md  migration.md  overview.md  performance.md  product-scope.md  release-notes-0.1.0.md  release-notes-1.0.0-rc.1.md  release-notes-1.0.0.md  release-notes-1.1.0-rc.1.md  release-notes-1.1.0.md  release-notes-1.10.0-rc.1.md  release-notes-1.10.0.md  release-notes-1.11.0-rc.1.md  release-notes-1.11.0.md  release-notes-1.12.0-rc.1.md  release-notes-1.12.0.md  release-notes-1.13.0-rc.1.md  release-notes-1.13.0.md  release-notes-1.14.0-rc.1.md  release-notes-1.14.0.md  release-notes-1.15.0-rc.1.md  release-notes-1.15.0.md  release-notes-1.15.1.md  release-notes-1.16.0-rc.1.md  release-notes-1.16.0.md  release-notes-1.17.0-rc.1.md  release-notes-1.17.0.md  release-notes-1.18.0-rc.1.md  release-notes-1.18.0.md  release-notes-1.19.0-rc.1.md  release-notes-1.19.0.md  release-notes-1.2.0-rc.1.md  release-notes-1.2.0.md  release-notes-1.20.0.md  release-notes-1.21.0.md  (+87 more)
native/shortcut-editor/: CMakeLists.txt
native/shortcut-editor/data/: io.github.kontonkara.driftile.shortcuts.desktop  io.github.kontonkara.driftile.shortcuts.metainfo.xml
native/shortcut-editor/src/: main.cpp  shortcutbackend.cpp  shortcutbackend.h  shortcuteditorwindow.cpp  shortcuteditorwindow.h  shortcuttablemodel.cpp  shortcuttablemodel.h  shortcuttypes.cpp  shortcuttypes.h
native/wheel-control/: CMakeLists.txt  metadata.json.in
native/wheel-control/src/: main.cpp  wheelcontroleffect.cpp  wheelcontroleffect.h
nix/: home-manager-check.nix  lifecycle-vm.nix  module-check.nix  vm.nix
src/: application-borderless-exclusions.ts  application-column-presentations.ts  application-exclusions.ts  application-floating-positions.ts  application-focus-centering.ts  application-initial-destinations.ts  application-initial-floating.ts  application-initial-focused.ts  application-initial-full-width.ts  application-initial-fullscreen.ts  application-initial-layouts.ts  application-initial-maximized.ts  application-initial-unfocused.ts  application-overrides.ts  application-tiling-exclusions.ts  application-window-heights.ts  column-width-presets.ts  default-floating-position.ts  default-initial-destination.ts  default-initial-focus.ts  default-window-height.ts  layout-persistence-validator-cli.ts  numbered-desktop-targets.ts  pointer-preview-context.ts  runtime-controller.ts  runtime-persistence.ts  runtime.ts  settings.ts  shortcut-actions.ts  shortcut-cli.ts  shortcut-command-options.ts  shortcut-config.ts  shortcut-ownership.ts  shortcut-profile.ts  window-height-presets.ts
tests/: application-borderless-exclusions.test.ts  application-overrides.test.ts  application-tiling-exclusions.test.ts  application-window-heights.test.ts  column-width-presets.test.ts  default-initial-destination.test.ts  default-initial-focus.test.ts  default-window-height.test.ts  native-wheel-control.test.ts  numbered-desktop-targets.test.ts  overview-activation-cache.test.ts  overview-activation-controller.test.ts  overview-application-icon-config.test.ts  overview-close-button-config.test.ts  overview-context-refresh-scene.test.ts  overview-desktop-name-config.test.ts  overview-desktop-surface-presentation.test.ts  overview-desktop-surface-readiness.test.ts  overview-desktop-surface-residency-scene.test.ts  overview-effect.test.ts  overview-entry-visual-probe.test.ts  overview-exit-handoff-controller.test.ts  overview-exit-handoff-scene.test.ts  overview-exit-handoff.test.ts  overview-internal-motion.test.ts  overview-live-refresh.test.ts  overview-output-name-config.test.ts  overview-spatial-drag.test.ts  overview-spatial-drop-basis.test.ts  overview-spatial-drop-channel.test.ts  (+31 more)
(+190 files in other folders)
